--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^16.13.1",
     "react-multi-email": "^0.5.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3"
+    "react-schedule-selector": "^3.0.0",
+    "react-scripts": "^3.4.3",
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
