--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@zach.codes/react-calendar": "^0.2.0",
+    "@zach.codes/react-calendar": "^0.3.0-beta",
     "bootstrap": "^4.5.2",
     "date-fns": "^2.22.1",
     "firebase": "^7.20.0",
