--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,5 @@ REACT_APP_FIREBASE_PROJECT_ID=collabcalendar-f39bf
 REACT_APP_FIREBASE_STORAGE_BUCKET=collabcalendar-f39bf.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=226721612592
 REACT_APP_FIREBASE_APP_ID=1:226721612592:web:2d68b266e909e85711bef5
+REACT_APP_GOOGLE_CLIENT_ID=226721612592-h11rkk8qa5slsc1m5bjus9fm2sblqb1v.apps.googleusercontent.com
+REACT_APP_GOOGLE_API_KEY=AIzaSyDVKC9XDs2LVxPBKYJcKDip72E2UCYky78
