--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.22.1",
     "firebase": "^7.20.0",
     "googleapis": "^39.2.0",
+    "mailgun-js": "^0.22.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
