code cleaning and commenting

--- a/.env.local
+++ b/.env.local
@@ -6,3 +6,5 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=226721612592
 REACT_APP_FIREBASE_APP_ID=1:226721612592:web:2d68b266e909e85711bef5
 REACT_APP_GOOGLE_CLIENT_ID=226721612592-h11rkk8qa5slsc1m5bjus9fm2sblqb1v.apps.googleusercontent.com
 REACT_APP_GOOGLE_API_KEY=AIzaSyDVKC9XDs2LVxPBKYJcKDip72E2UCYky78
+REACT_APP_MAILGUN_API_KEY=ceb416a9683355934fb64fd65f6f4cd6-c485922e-76d60c7b
+REACT_APP_MAILGUN_DOMAIN=sandboxe85e23368c4c436db4e8eaa439b4a881.mailgun.org
